# SATySFi-num-conversion

./: .gitignore  Makefile  README.md  Satyristes  num-conversion.satyh  numConversion.satyh  satysfi-num-conversion-doc.opam  satysfi-num-conversion.opam
.github/workflows/: blank.yml
doc/: doc-ja.md  doc-ja.saty
test/: test.saty
